--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -138,3 +138,16 @@
     @apply bg-background text-foreground;
   }
 }
+
+body {
+  padding:
+          env(safe-area-inset-top)
+          env(safe-area-inset-right)
+          env(safe-area-inset-bottom)
+          env(safe-area-inset-left);
+}
+
+/* Hide overflow scrollbars on iOS */
+* {
+  -webkit-overflow-scrolling: touch;
+}
